updated alignment error section
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@3880 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/appendices.tex
+++ b/2010/thesis/appendices.tex
@@ -1,6 +1,6 @@
 \chapter{Statistics}
 
-\section{Mean, variance, etc.}
+\section[stat estim]{Mean, variance, etc.}
 
 Let's consider a sample ${x_1, \ldots, x_N}$. Each of $x_i$ follows the same distribution $h(x)$. Let's denote $\mu$ the mean and $\si^2$ the variance of the distribution:
 \eqref{\mu = \int \d x\, h(x)\, x,\qquad \si^2 = \int \d x\, h(x)\, (x-\mu)^2.}{mu si}
